crates/kb-core/tests/snapshots/session_digest_snapshots__digest_ask_user_question.snap
---
source: crates/kb-core/tests/session_digest_snapshots.rs
expression: "format! (\"{report:#?}\")"
---
DigestReport {
    session_id: "a90f3b17-42c6-4d58-9e03-618b7fc25d94",
    message_count: 38,
    first_user_prompt: Some(
        "do a wide review of the top buttons and the sitewide links in the demo reader, they drop the corpus you are on when you follow them, check every one and fix them properly, think it through first",
    ),
    ai_title: Some(
        "Review and fix the reader's top buttons and sitewide links",
    ),
    cwd: Some(
        "/home/user/project/demo",
    ),
    all_cwds_count: 2,
    git_branch: Some(
        "main",
    ),
    model: Some(
        "claude-opus-4-8",
    ),
    token_total: 3271,
    tool_calls: 10,
    error_count: 0,
    files_read_count: 6,
    files_edited_count: 0,
    decisions: [
        (
            "question",
            "How wide should the rename reach? Every surface shares one helper, so going wide costs about the same as going narrow.",
            Some(
                "All navigation (Recommended)",
            ),
        ),
        (
            "question",
            "When the reader switches corpus from the picker while a note is open, what should happen to the open note?",
            Some(
                "Keep the note open (Recommended)",
            ),
        ),
        (
            "question",
            "The index, history and bookmark pages read from every corpus by design. Should they still carry the active corpus in the URL?",
            Some(
                "Carry the corpus (Recommended)",
            ),
        ),
    ],
    commits: [],
    research: [
        (
            "subagent",
            "Explore the top nav and the sitewide links",
        ),
        (
            "subagent",
            "Explore how the active corpus is stored and routed",
        ),
        (
            "subagent",
            "Explore the reader route and its corpus context",
        ),
    ],
    digest: "Review and fix the reader's top buttons and sitewide links\ndo a wide review of the top buttons and the sitewide links in the demo reader, they drop the corpus you are on when you follow them, check every one and fix them properly, think it through first\ndecision: How wide should the rename reach? Every surface shares one helper, so going wide costs about the same as going narrow. -> All navigation (Recommended)\ndecision: When the reader switches corpus from the picker while a note is open, what should happen to the open note? -> Keep the note open (Recommended)\ndecision: The index, history and bookmark pages read from every corpus by design. Should they still carry the active corpus in the URL? -> Carry the corpus (Recommended)\nresearched: Explore the top nav and the sitewide links; Explore how the active corpus is stored and routed; Explore the reader route and its corpus context\nfiles: navItems.ts TopBar.tsx useCorpus.ts reader.tsx hrefs.ts history.tsx\nclosed: That's the whole inventory: eleven call sites, one helper, and three behaviours to pin. With the answers above the change is mechanical — every navigation surface routes through the same builder, the…\nproject: demo branch: main",
    digest_excerpt: "Review and fix the reader's top buttons and sitewide links · do a wide review of the top buttons and the sitewide links in the demo reader, they drop the corpus you are on when you follow them, check every one and fix them properly, think it through first · closed: That's the whole inventory: eleven call sites, one helper, and three behaviours to pin. With the answers above the change is mechanica",
}
